fix: enforce smart park runtime trust boundaries